[tool.poetry]
name = "python-datastructures"
version = "0.1.0"
description = "Python datastructures package"
authors = ["Tomasz Turek <ttomaszito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
tox = "^3.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
