[tool.poetry]
name = "python-datastructures"
version = "0.1.3"
description = "Python datastructures package"
authors = ["Tomasz Turek <ttomaszito@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TuTomasz/Python-Datastructures"
repository = "https://github.com/TuTomasz/Python-Datastructures"
keywords = ["Datastructures","Data Structures","queue","stack","trie","heap","linked-list"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
Pylint = "^2.6.0"
Pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
